--- a/TaskDropper/TaskFropper.WPF/Views/AboutView.xaml
+++ b/TaskDropper/TaskFropper.WPF/Views/AboutView.xaml
@@ -9,10 +9,10 @@
     xmlns:viewModels="clr-namespace:TaskDropper.Core.ViewModels;assembly=TaskDropper.Core"
       xmlns:Control="clr-namespace:TaskFropper.WPF.Resources.Controls"
                   mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800">
-   
+      d:DesignHeight="450" d:DesignWidth="800" Background="#FF554545" MinWidth="150">
+
     <!--<Control:ScrollBar>-->
-        <!--<StackPanel Margin="20">
+    <!--<StackPanel Margin="20">
                 <Control:LabeledTextBox Width="Auto"
                 Text= "{Binding Email, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                 LabelText="{Binding Name}" Loaded="LabeledTextBox_Loaded" />
@@ -22,15 +22,18 @@
                 </StackPanel>-->
     <ScrollViewer Style="{StaticResource RightScrollViewer}" >
         <StackPanel Height="700" Background="#FF554545">
-            <Control:GroupRadioButton Margin="40"
+            <Control:GroupRadioButton Margin="40" MinWidth="100"
                 LabelTextRadio1 ="{Binding Name}"
                 LabelTextRadio2="{Binding Email}"/>
-            <Control:LabeledTextBox Width="Auto"
+            <Control:LabeledTextBox 
                 Text= "{Binding Email, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                LabelText="{Binding Name}" Loaded="LabeledTextBox_Loaded" />
-            <Button Content="Show Task Change View" Name="ShowTaskChange" Command="{Binding ShowTaskChangedView}" Width="Auto" Margin="49"/>
+                LabelText="{Binding Name}" Loaded="LabeledTextBox_Loaded" 
+                Width="300"
+                />
+            <Button Content="Show Task Change View" x:Name="ShowTaskChange" Command="{Binding ShowTaskChangedView}" Width="Auto" Margin="49"/>
+            <TextBox Height="23" TextWrapping="Wrap" Text="TextBox" Style="{DynamicResource TempleteTextBox}"/>
         </StackPanel>
     </ScrollViewer>
-    
+
     <!--</Control:ScrollBar>-->
 </views:MvxWpfView>
