--- a/TaskDropper/TaskFropper.WPF/Views/TaskChangeView.xaml
+++ b/TaskDropper/TaskFropper.WPF/Views/TaskChangeView.xaml
@@ -6,12 +6,66 @@
       xmlns:views="clr-namespace:MvvmCross.Platforms.Wpf.Views;assembly=MvvmCross.Platforms.Wpf"
       xmlns:mvx="clr-namespace:MvvmCross.Platforms.Wpf.Binding;assembly=MvvmCross.Platforms.Wpf"
      x:TypeArguments="viewModels:TaskChangedViewModel"
-    xmlns:viewModels="clr-namespace:TaskDropper.Core.ViewModels;assembly=TaskDropper.Core"
+          xmlns:Control="clr-namespace:TaskFropper.WPF.Resources.Controls"
+                  xmlns:viewModels="clr-namespace:TaskDropper.Core.ViewModels;assembly=TaskDropper.Core"
   xmlns:viewModel = "clr-namespace:TaskDropper.Core.ViewModels;assembly=TaskDropper.Core" 
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-        <Button Content="Show About View" Command="{Binding ShowAboutView}" HorizontalAlignment="Left" Margin="215,70,0,0" VerticalAlignment="Top" Width="279" Height="60"/>
+      d:DesignHeight="450" d:DesignWidth="640" >
 
+    <Grid MouseMove="Grid_MouseMove">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+        <Slider Minimum="0" Maximum="360" Name="slider" Value="{Binding ElementName=rotate, Path= Angle}" />
+        <Viewport3D Grid.Row="1">
+            <Viewport3D.Camera>
+                <PerspectiveCamera x:Name="camera" Position="0.5,0.5,3.5" LookDirection="0,0,-3.5"  />
+            </Viewport3D.Camera>
+            <Viewport3D.Children>
+                <ModelVisual3D>
+                    <ModelVisual3D.Content>
+                        <DirectionalLight Color="White" Direction="-1,-1,-2" />
+                    </ModelVisual3D.Content>
+                </ModelVisual3D>
+                <Viewport2DVisual3D>
+
+                    <Viewport2DVisual3D.Geometry>
+                        <MeshGeometry3D Positions="0,0,0 1,0,0 0,1,0 1,1,0 
+                                               0,0,1 1,0,1 0,1,1 1,1,1"
+                                    TriangleIndices="0,2,1 1,2,3 0,4,2 2,4,6 
+                                                     0,1,4 1,5,4 1,7,5 1,3,7
+                                                     4,5,6 7,6,5 2,6,3 3,6,7"
+                                    TextureCoordinates="0,1 1,1 0,0 1,0 
+                                                        0,1 1,1 0,0 1,0"/>
+                    </Viewport2DVisual3D.Geometry>
+
+                    <Viewport2DVisual3D.Material>
+                        <DiffuseMaterial Viewport2DVisual3D.IsVisualHostMaterial="True" />
+                    </Viewport2DVisual3D.Material>
+
+                    <Viewport2DVisual3D.Visual>
+                        <Border BorderBrush="Black" BorderThickness="1">
+                            <StackPanel>
+                                <Label Content="Registration"/>
+                                <Label Content="Login"/>
+                                <TextBox></TextBox>
+                                <Label Content="Password"/>
+                                <TextBox></TextBox>
+                            </StackPanel>
+                        </Border>
+                    </Viewport2DVisual3D.Visual>
+
+                    <Viewport2DVisual3D.Transform>
+                        <RotateTransform3D>
+                            <RotateTransform3D.Rotation>
+                                <AxisAngleRotation3D x:Name="rotate" Axis="0 1 0" Angle="60" />
+                            </RotateTransform3D.Rotation>
+                        </RotateTransform3D>
+                    </Viewport2DVisual3D.Transform>
+                </Viewport2DVisual3D>
+            </Viewport3D.Children>
+        </Viewport3D>
     </Grid>
+    
 </views:MvxWpfView>
