--- a/TaskDropper/TaskFropper.WPF/Resources/Theme/TextBox.xaml
+++ b/TaskDropper/TaskFropper.WPF/Resources/Theme/TextBox.xaml
@@ -5,18 +5,16 @@
         <Setter Property="Background" Value="#FF44364B"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
-        <Setter Property="Margin" Value="30,5,5,5"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type TextBox}">
                     <Grid>
                         <Path Fill="{TemplateBinding BorderBrush}" x:Name="Border" Stroke="#FFA68A8A"
                                  StrokeThickness="2" Stretch="Fill"
-                                  Data="M 0,0 H 108 l 7,7 v 18 H 7 l -7,-7 v -19" />
-                        
+                                  Data="M 0,0 H 428 l 7,7 v 18 H 7 l -7,-7 v -19" />
                         <ScrollViewer 
                                 x:Name="PART_ContentHost" 
-                                Padding="35"
+                            Margin="15,0,15,0"
                                 Background="Transparent"
                                 HorizontalAlignment="Center"
                                 VerticalAlignment="Center"
@@ -32,4 +30,88 @@
         </Setter>
     </Style>
 
+    <Style x:Key="test" TargetType="{x:Type TextBox}">
+        <Setter Property="Background" Value="#FF44364B"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+       
+        <Setter Property="Template">
+        <Setter.Value>
+                <ControlTemplate TargetType="{x:Type TextBox}">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="7"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="7"/>
+                        </Grid.ColumnDefinitions>
+                        <Path Grid.Column="0" Stretch="Fill" Data="M 7,0 H 0 v 18 l 7,7" Fill="{TemplateBinding BorderBrush}" Stroke="#FFA68A8A" StrokeThickness="2"/>
+                        <Grid HorizontalAlignment="Stretch" Margin="-1,0,-1,0" Grid.Column="1" Height="Auto">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="2"/>
+                                <RowDefinition Height="*"/>
+                                <RowDefinition Height="2"/>
+                            </Grid.RowDefinitions>
+                            <Grid Grid.Row="0" Height="2"  Background="#FFA68A8A"></Grid>
+                            <Border   Grid.Column="1" Grid.Row="1"  Height="35"  x:Name="border" Background="{TemplateBinding BorderBrush}"  SnapsToDevicePixels="True">
+                                <ScrollViewer 
+                                x:Name="PART_ContentHost" 
+                                Margin="15,0,15,0"
+                                Background="Transparent"
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center"
+                                />
+                            </Border>
+                            <Grid Grid.Row="2" Height="2"  Grid.Column="1" Background="#FFA68A8A"></Grid>
+                        </Grid>
+                        <Path Grid.Column="2" Stretch="Fill" Data="M 106,0 l 7,7 v 18 h -7" Fill="{TemplateBinding BorderBrush}" Stroke="#FFA68A8A" StrokeThickness="2"/>
+                    </Grid>
+                </ControlTemplate>
+        </Setter.Value>
+    </Setter>
+    </Style>
+    
+    <SolidColorBrush x:Key="TextBox.Static.Border" Color="#FFABAdB3"/>
+    <SolidColorBrush x:Key="TextBox.MouseOver.Border" Color="#FF7EB4EA"/>
+    <SolidColorBrush x:Key="TextBox.Focus.Border" Color="#FF569DE5"/>
+    <Style x:Key="TempleteTextBox" TargetType="{x:Type TextBox}">
+        <Setter Property="Background" Value="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"/>
+        <Setter Property="BorderBrush" Value="{StaticResource TextBox.Static.Border}"/>
+        <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
+        <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="KeyboardNavigation.TabNavigation" Value="None"/>
+        <Setter Property="HorizontalContentAlignment" Value="Left"/>
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+        <Setter Property="AllowDrop" Value="true"/>
+        <Setter Property="ScrollViewer.PanningMode" Value="VerticalFirst"/>
+        <Setter Property="Stylus.IsFlicksEnabled" Value="False"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type TextBox}">
+                    <Border x:Name="border" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" SnapsToDevicePixels="True">
+                        <ScrollViewer x:Name="PART_ContentHost" Focusable="false" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Hidden"/>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsEnabled" Value="false">
+                            <Setter Property="Opacity" TargetName="border" Value="0.56"/>
+                        </Trigger>
+                        <Trigger Property="IsMouseOver" Value="true">
+                            <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource TextBox.MouseOver.Border}"/>
+                        </Trigger>
+                        <Trigger Property="IsKeyboardFocused" Value="true">
+                            <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource TextBox.Focus.Border}"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Style.Triggers>
+            <MultiTrigger>
+                <MultiTrigger.Conditions>
+                    <Condition Property="IsInactiveSelectionHighlightEnabled" Value="true"/>
+                    <Condition Property="IsSelectionActive" Value="false"/>
+                </MultiTrigger.Conditions>
+                <Setter Property="SelectionBrush" Value="{DynamicResource {x:Static SystemColors.InactiveSelectionHighlightBrushKey}}"/>
+            </MultiTrigger>
+        </Style.Triggers>
+    </Style>
 </ResourceDictionary>
