--- a/TaskDropper/TaskFropper.WPF/Resources/Theme/Theme.xaml
+++ b/TaskDropper/TaskFropper.WPF/Resources/Theme/Theme.xaml
@@ -6,5 +6,6 @@
         <ResourceDictionary Source="ScrollBar.xaml" />
         <ResourceDictionary Source="TextBox.xaml" />
         <ResourceDictionary Source="Menu.xaml" />
+        <ResourceDictionary Source="Button.xaml" />
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
