--- a/TaskDropper/TaskFropper.WPF/Views/TaskChangeView.xaml
+++ b/TaskDropper/TaskFropper.WPF/Views/TaskChangeView.xaml
@@ -18,6 +18,7 @@
             <RowDefinition />
         </Grid.RowDefinitions>
         <Slider Minimum="0" Maximum="360" Name="slider" Value="{Binding ElementName=rotate, Path= Angle}" />
+        
         <Viewport3D Grid.Row="1">
             <Viewport3D.Camera>
                 <PerspectiveCamera x:Name="camera" Position="0.5,0.5,3.5" LookDirection="0,0,-3.5"  />
@@ -30,29 +31,13 @@
                 </ModelVisual3D>
                 <Viewport2DVisual3D>
 
-                    <Viewport2DVisual3D.Geometry>
-                        <MeshGeometry3D Positions="0,0,0 1,0,0 0,1,0 1,1,0 
-                                               0,0,1 1,0,1 0,1,1 1,1,1"
-                                    TriangleIndices="0,2,1 1,2,3 0,4,2 2,4,6 
-                                                     0,1,4 1,5,4 1,7,5 1,3,7
-                                                     4,5,6 7,6,5 2,6,3 3,6,7"
-                                    TextureCoordinates="0,1 1,1 0,0 1,0 
-                                                        0,1 1,1 0,0 1,0"/>
-                    </Viewport2DVisual3D.Geometry>
-
                     <Viewport2DVisual3D.Material>
                         <DiffuseMaterial Viewport2DVisual3D.IsVisualHostMaterial="True" />
                     </Viewport2DVisual3D.Material>
 
                     <Viewport2DVisual3D.Visual>
-                        <Border BorderBrush="Black" BorderThickness="1">
-                            <StackPanel>
-                                <Label Content="Registration"/>
-                                <Label Content="Login"/>
-                                <TextBox></TextBox>
-                                <Label Content="Password"/>
-                                <TextBox></TextBox>
-                            </StackPanel>
+                        <Border BorderBrush="White" BorderThickness="1">
+                            
                         </Border>
                     </Viewport2DVisual3D.Visual>
 
